# fung-alghs

./: .gitignore
lab1/: 1.c  10v2.c  10v3.c  3.c  4.c  5.c  6.c  7.c  8v2.c  9_1.c  9_2.c
lab2/task1/: CMakeLists.txt  funcs.c  funcs.h  main.c
lab2/task10/: CMakeLists.txt  main.c
lab2/task2/: CMakeLists.txt  funcs.c  funcs.h
lab2/task3/: 2.txt  CMakeLists.txt  funcs.c  funcs.h  main.c
lab2/task4/: CMakeLists.txt  funcs.c  funcs.h  main.c
lab2/task5/: CMakeLists.txt  main.c
lab2/task6/: CMakeLists.txt  main.c
lab2/task7/: CMakeLists.txt
lab2/task9/: CMakeLists.txt  main.c
lab3/: CMakeLists.txt
lab3/task1/: funcs.c  funcs.h  main.c
lab3/task10/: input.txt  main.c  out.txt
lab3/task2/: main.c
lab3/task3/: main.c
lab3/task4/: main.c  string.c  string.h
lab3/task5/: in.txt  main.c  out.txt  test5.txt
lab4/: CMakeLists.txt
lab4/task1/: in.txt  main.c
lab4/task2/: comands  input1.txt  main.c  output1.txt
lab4/task7/: input  main.c
lab5/: CMakeLists.txt
lab5/task1/: main.cpp
lab5/task2/: main.cpp
lab5/task3/: main.cpp
lab5/task4/: main.cpp
lab5/task6/: main.cpp
lab5/task7/: main.cpp
task1/: funcs.c  funcs.h  main.c
task2/: CMakeLists.txt  funcs.c  main.c
