cmake_minimum_required(VERSION 3.22)
project(lab5)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab1t1 task1/main.cpp)
add_executable(lab1t4 task4/main.cpp)
add_executable(lab1t3 task3/main.cpp)
add_executable(lab1t6 task6/main.cpp)
add_executable(lab1t2 task2/main.cpp)
add_executable(lab1t7 task7/main.cpp)